@@ -40,12 +40,10 @@ public class CachedRowSetResultSetProxyLogic implements ResultSetProxyLogic {
 
     @Override
     public Object invoke(Method method, Object[] args) throws Throwable {
-        return MethodExecutionListenerUtils.invoke(new MethodExecutionListenerUtils.MethodExecutionCallback() {
-            @Override
-            public Object execute(Object proxyTarget, Method method, Object[] args) throws Throwable {
-                return performQueryExecutionListener(method, args);
-            }
-        }, this.proxyConfig, this.cachedRowSet, this.connectionInfo, method, args);
+        return MethodExecutionListenerUtils.invoke(
+                (proxyTarget, targetMethod, targetArgs) -> {
+                    return performQueryExecutionListener(targetMethod, targetArgs);
+                }, this.proxyConfig, this.cachedRowSet, this.connectionInfo, method, args);
     }
 
     private Object performQueryExecutionListener(Method method, Object[] args) throws Throwable {
