@@ -116,12 +116,10 @@ public class StatementProxyLogic {
 
     public Object invoke(Method method, Object[] args) throws Throwable {
 
-        return MethodExecutionListenerUtils.invoke(new MethodExecutionListenerUtils.MethodExecutionCallback() {
-            @Override
-            public Object execute(Object proxyTarget, Method method, Object[] args) throws Throwable {
-                return performQueryExecutionListener(method, args);
-            }
-        }, this.proxyConfig, this.statement, this.connectionInfo, method, args);
+        return MethodExecutionListenerUtils.invoke(
+                (proxyTarget, targetMethod, targetArgs) ->
+                        performQueryExecutionListener(targetMethod, targetArgs),
+                this.proxyConfig, this.statement, this.connectionInfo, method, args);
 
     }
 
